force-app/main/default/objects/Candidate_Scoring_Config__mdt/Candidate_Scoring_Config__mdt.object-meta.xml
<CustomObject>
    <label>Candidate Scoring Config</label>
    <pluralLabel>Candidate Scoring Configs</pluralLabel>
</CustomObject>