force-app/main/default/objects/Candidate_Scoring_Config__mdt/fields/Weight_Education__c.field-meta.xml
<CustomField>
    <fullName>Weight_Education__c</fullName>
    <label>Weight Education</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>