force-app/main/default/objects/Candidate_Scoring_Config__mdt/fields/Weight_Experience__c.field-meta.xml
<CustomField>
    <fullName>Weight_Experience__c</fullName>
    <label>Weight Experience</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>