force-app/main/default/objects/Candidate_Scoring_Config__mdt/fields/Weight_Skills__c.field-meta.xml
<CustomField>
    <fullName>Weight_Skills__c</fullName>
    <label>Weight Skills</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>